syntax="proto2";
message SundaeDataMessage { //1512 bytes constraint
  optional uint32 regen_enabled = 1;
  optional uint32 regen_command = 2;
  optional uint32 battery_power = 3;
  optional float array_power = 4;
  optional uint32 reverse_on = 5;
  optional float low_volt_power = 6;
  optional int32 cell_read_error = 7;
  optional uint32 cell_bleed = 8;
  optional float cruise_speed = 9;
  optional int32 hazard_lights_on = 10;
  optional float battery_voltage = 11;
  optional uint32 ltc6804_badpec = 12;
  optional uint32 bms_state = 13;
  optional int32 charge_enabled = 14;
  optional int32 discharge_enabled = 15;
  optional int32 highside_contactor_on = 16;
  optional int32 lowside_contactor_on = 17;
  optional int32 precharge_on = 18;
  optional int32 low_volt_bus_on = 19;
  optional float battery_temp_1 = 20;
  optional float battery_temp_2 = 21;
  optional float battery_temp_3 = 22;
  optional float battery_temp_4 = 23;
  optional float battery_temp_5 = 24;
  optional float battery_temp_6 = 25;
  optional float bms_precharge_battery_adc = 26;
  optional float bms_precharge_car_adc = 27;
  //gap
  optional float low_volt_output_current = 29;
  optional float array_current = 30;
  optional float battery_current = 31;
  optional float left_motor_controller_power = 32;
  optional float right_motor_controller_power = 33;
  optional float amp_hours = 34;
  optional int32 head_lights_on = 35;
  optional int32 brake_lights_on = 36;
  optional int32 right_blinker_on = 37;
  optional int32 left_blinker_on = 38;
  optional int32 brake_pressed = 39;
  optional int32 throttle_pressed = 40;
  optional uint32 drive_mode = 41;
  optional int32 motor_controller_enabled = 42;
  optional float motor_controller_speed = 43;
  optional float motor_controller_rpm = 44;
  optional float avg_odometer = 45; //???
  optional float left_motor_temp = 46;
  optional float right_motor_temp = 47;
  optional float left_motor_controller_temp = 48;
  optional float right_motor_controller_temp = 49;
  optional float left_motor_controller_alive = 50;
  optional float right_motor_controller_alive = 51;
  optional float left_motor_controller_current = 52;
  optional float right_motor_controller_current = 53;
  optional float motor_controller_current_diff = 54;
  optional uint32 left_motor_controller_error = 55;
  optional uint32 right_motor_controller_error = 56;
  optional uint32 left_motor_controller_limit = 57;
  optional uint32 right_motor_controller_limit = 58;
  optional uint32 left_motor_controller_rx_error_count = 59;
  optional uint32 right_motor_controller_rx_error_count = 60;
  optional uint32 left_motor_controller_tx_error_count = 61;
  optional uint32 right_motor_controller_tx_error_count = 62;
  optional float left_motor_controller_bus_voltage = 63;
  optional float right_motor_controller_bus_voltage = 64;
  optional float left_motor_controller_15v_voltage = 65;
  optional float right_motor_controller_15v_voltage = 66;
  optional float left_motor_controller_3v3_voltage = 67;
  optional float right_motor_controller_3v3_voltage = 68;
  optional float left_motor_controller_1v9_voltage = 69;
  optional float right_motor_controller_1v9_voltage = 70;
  optional float left_motor_controller_dsp_temp = 71;
  optional float right_motor_controller_dsp_temp = 72;
  optional float left_motor_controller_phase_current = 73;
  optional float right_motor_controller_phase_current = 74;
  optional float left_motor_rpm_command = 75;
  optional float right_motor_rpm_command = 76;
  optional float left_motor_current_command = 77;
  optional float right_motor_current_command = 78;
  optional int64 gps_time = 80;
  optional float gps_latitude = 81;
  optional float gps_longitude = 82;
  optional float gps_speed = 83;
  optional float gps_altitude = 84;
  optional float gps_bearing = 85;
  optional int32 led_state = 86;
  optional float mppt_array_power = 87;
  optional float mppt_A0_volt_in = 88;
  optional float mppt_A0_volt_out = 89;
  optional float mppt_A0_current = 90;
  optional float mppt_A0_temp = 91;
  optional float mppt_A1_volt_in = 92;
  optional float mppt_A1_volt_out = 93;
  optional float mppt_A1_current = 94;
  optional float mppt_A1_temp = 95;
  optional float mppt_B0_volt_in = 96;
  optional float mppt_B0_volt_out = 97;
  optional float mppt_B0_current = 98;
  optional float mppt_B0_temp = 99;
  optional float mppt_B1_volt_in = 100;
  optional float mppt_B1_volt_out = 101;
  optional float mppt_B1_current = 102;
  optional float mppt_B1_temp = 103;
  optional float mppt_C0_volt_in = 104;
  optional float mppt_C0_volt_out = 105;
  optional float mppt_C0_current = 106;
  optional float mppt_C0_temp = 107;
  optional float mppt_C1_volt_in = 108;
  optional float mppt_C1_volt_out = 109;
  optional float mppt_C1_current = 110;
  optional float mppt_C1_temp = 111;
  optional float mppt_D0_volt_in = 112;
  optional float mppt_D0_volt_out = 113;
  optional float mppt_D0_current = 114;
  optional float mppt_D0_temp = 115;
  optional float mppt_D1_volt_in = 116;
  optional float mppt_D1_volt_out = 117;
  optional float mppt_D1_current = 118;
  optional float mppt_D1_temp = 119;
  optional float cell_volt_1 = 120;
  optional float cell_volt_2 = 121;
  optional float cell_volt_3 = 122;
  optional float cell_volt_4 = 123;
  optional float cell_volt_5 = 124;
  optional float cell_volt_6 = 125;
  optional float cell_volt_7 = 126;
  optional float cell_volt_8 = 127;
  optional float cell_volt_9 = 128;
  optional float cell_volt_10 = 129;
  optional float cell_volt_11 = 130;
  optional float cell_volt_12 = 131;
  optional float cell_volt_13 = 132;
  optional float cell_volt_14 = 133;
  optional float cell_volt_15 = 134;
  optional float cell_volt_16 = 135;
  optional float cell_volt_17 = 136;
  optional float cell_volt_18 = 137;
  optional float cell_volt_19 = 138;
  optional float cell_volt_20 = 139;
  optional float cell_volt_21 = 140;
  optional float cell_volt_22 = 141;
  optional float cell_volt_23 = 142;
  optional float cell_volt_24 = 143;
  optional float cell_volt_25 = 144;
  optional float cell_volt_26 = 145;
  optional float cell_volt_27 = 146;
  optional float cell_volt_28 = 147;
  optional float cell_volt_29 = 148;
  optional float cell_volt_30 = 149;
  optional float cell_volt_31 = 150;
  optional float cell_volt_min = 151;
  optional float cell_volt_max = 152;
  optional float cell_volt_avg = 153; //not in use
  optional float cell_volt_diff = 154;
  optional int32 power_save_on = 155;
  optional int32 rearview_on = 156;
  optional int32 mic_enabled = 157;
  optional int32 imu_temp = 158;
  optional int32 imu_magnet_x = 159;
  optional int32 imu_magnet_y = 160;
  optional int32 imu_magnet_z = 161;
  optional int32 imu_gyro_x = 162;
  optional int32 imu_gyro_y = 163;
  optional int32 imu_gyro_z = 164;
  optional int32 imu_accel_x = 165;
  optional int32 imu_accel_y = 166;
  optional int32 imu_accel_z = 167;
  optional float bms_left_motor_controller_current = 168;
  optional float bms_right_motor_controller_current = 169;
  optional float bms_motor_controller_current_sum = 170;
  optional float packets_per_sec = 171;
}
